--- a/src/components/Spinner/Spinner.scss
+++ b/src/components/Spinner/Spinner.scss
@@ -25,6 +25,41 @@
   &.center {
     @include absolute-center;
   }
+
+  &-small {
+    z-index: 2;
+    width: 20px;
+    height: 20px;
+    animation: rotate 2s linear infinite;
+    
+    & .path {
+      animation: dash 1.5s ease-in-out infinite;
+      stroke: var(--button-bg-color);
+      stroke-linecap: round;
+    }
+    
+  }
+
+  @keyframes rotate {
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
+  @keyframes dash {
+    0% {
+      stroke-dasharray: 1, 150;
+      stroke-dashoffset: 0;
+    }
+    50% {
+      stroke-dasharray: 90, 150;
+      stroke-dashoffset: -35;
+    }
+    100% {
+      stroke-dasharray: 90, 150;
+      stroke-dashoffset: -124;
+    }
+  }
 }
 
 .spinner-blade {
