--- a/src/components/DataList/DataList.scss
+++ b/src/components/DataList/DataList.scss
@@ -1,3 +1,80 @@
+.add-contact {
+  &-button {
+    position: absolute;
+    top: 40px;
+    right: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: var(--dark-color);
+    background-color: var(--transparent);
+    border: none;
+    outline: none;
+    cursor: pointer;
+
+    &-input {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      color: var(--links-color);
+      font-size: var(--md-font-size);
+      background-color: var(--transparent);
+      border: none;
+      outline: none;
+      cursor: pointer;
+
+      & > span {
+        position: relative;
+        display: block;
+        width: 18px;
+        height: 18px;
+        margin: 0 5px 2px;
+        border: 2px solid var(--links-color);
+        border-radius: 9px;
+
+        &::before, &::after {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          display: block;
+          width: 10px;
+          height: 2px;
+          background-color: var(--links-color);
+          transform: translate(-50%, -50%);
+          content: '';
+        }
+
+        &::after {
+          top: 45%;
+          left: 2px;
+          transform: rotate(90deg);
+          
+        }
+      }
+
+      & > p {
+        margin-bottom: 0;
+      }
+    }
+
+    & > p {
+      display: none;
+      margin-bottom: 0;
+    }
+
+    & > span {
+      display: block;
+      width: 25px;
+      height: 25px;
+      margin-right: 0;
+      background-image: url(../../images/mdi_person_add.svg);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: contain;
+    }
+  }
+}
+
 .balances {
   &-wrapper {
     position: relative;
@@ -54,12 +131,33 @@
     border-bottom: 1px solid var(--border-color);
     cursor: pointer;
 
+    &-right {
+      display: flex;
+      align-items: center;
+
+      & > div {
+        display: flex;
+        align-items: center;
+
+        & > p {
+          margin: 0 10px;
+          margin-bottom: 0;
+          color: var(--hints-color);
+        }
+      }
+    }
+
     & > button {
       display: none;
       width: 110px;
       background-color: var(--modal-bg-color);
       border: 1px solid var(--border-color);
       border-radius: 5px;
+
+      &.pending {
+        background-color: var(--copyblock-color);
+        cursor: auto;
+      }
 
       &:hover {
         background-color: var(--copyblock-color);
@@ -159,81 +257,14 @@
   }
 }
 
-.add-contact {
-  &-button {
-    position: absolute;
-    top: 40px;
-    right: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    color: var(--dark-color);
-    background-color: var(--transparent);
-    border: none;
-    outline: none;
-    cursor: pointer;
-
-    &-input {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      color: var(--links-color);
-      font-size: var(--md-font-size);
-      background-color: var(--transparent);
-      border: none;
-      outline: none;
-      cursor: pointer;
-
-      & > span {
-        position: relative;
-        display: block;
-        width: 18px;
-        height: 18px;
-        margin: 0 5px 2px;
-        border: 2px solid var(--links-color);
-        border-radius: 9px;
-
-        &::before, &::after {
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          display: block;
-          width: 10px;
-          height: 2px;
-          background-color: var(--links-color);
-          transform: translate(-50%, -50%);
-          content: '';
-        }
-
-        &::after {
-          top: 45%;
-          left: 2px;
-          transform: rotate(90deg);
-          
-        }
-      }
-
-      & > p {
-        margin-bottom: 0;
-      }
-    }
-
-    & > p {
-      display: none;
-      margin-bottom: 0;
-    }
-
-    & > span {
-      display: block;
-      width: 25px;
-      height: 25px;
-      margin-right: 0;
-      background-image: url(../../images/mdi_person_add.svg);
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: contain;
-    }
-  }
+.label-done {
+  width: 15px;
+  height: 15px;
+  background-image: url(../../images/success.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  border-radius: 13px;
 }
 
 .transaction-history {
@@ -295,6 +326,7 @@
   }
 
   &-address {
+    /* stylelint-disable-next-line no-descending-specificity */
     & > p {
       margin-bottom: 0;
       color: var(--dark-color);
