fix: night mode, transactions, token verifying

--- a/src/components/DataList/DataList.scss
+++ b/src/components/DataList/DataList.scss
@@ -128,8 +128,17 @@
     padding: 25px;
     color: var(--dark-color);
     font-size: var(--sm-font-size);
+    background-color: var(--transparent);
     border-bottom: 1px solid var(--border-color);
     cursor: pointer;
+
+    &.verified {
+      background-color: var(--transparent);
+    }
+
+    &.pending {
+      background-color: var(--info-message-color);
+    }
 
     &-right {
       display: flex;
