feat: sync with new api version, fix styling, add public key

--- a/src/index.scss
+++ b/src/index.scss
@@ -548,6 +548,10 @@ body.dark > #root {
         background-image: url(./images/deposit_dark_disable.svg);
       }
     }
+
+    &.unlock {
+      background-image: url(./images/lock_dark.svg);
+    }
   
     &.Send {
       background-image: url(./images/send_dark.svg);
