--- a/src/components/Transaction/Transaction.scss
+++ b/src/components/Transaction/Transaction.scss
@@ -57,6 +57,15 @@
     margin-bottom: 0;
     font-size: var(--md-font-size);
   }
+
+  &.center {
+    margin-bottom: 25px;
+    text-align: center;
+
+    & > p {
+      font-size: var(--large-font-size);
+    }
+  }
 }
 
 .currency {
@@ -74,6 +83,7 @@
     appearance: none;
 
     & > option {
+      /* stylelint-disable-next-line no-descending-specificity */
       & > p {
         font-size: var(--large-font-size);
       }
@@ -169,6 +179,10 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
+
+  &.unlock {
+    background-image: url(../../images/lock.svg);
+  }
 
   &.Deposit {
     background-image: url(../../images/deposit_white.svg);
