--- a/src/components/Transaction/Transaction.scss
+++ b/src/components/Transaction/Transaction.scss
@@ -107,6 +107,7 @@
       width: 100%;
       max-height: 50px;
       padding: 0;
+      color: var(--dark-color);
       font-size: var(--md-font-size);
       white-space: nowrap;
       text-overflow: ellipsis;
@@ -125,6 +126,7 @@
       justify-content: space-between;
       width: 100%;
       max-width: 500px;
+      height: 50px;
       margin-top: 10px;
       margin-top: 0;
       background-color: var(--transparent);
@@ -134,6 +136,7 @@
       }
 
       &.border {
+        height: 100px;
         border-bottom: 1px solid var(--border-color);
       }
     }
@@ -308,7 +311,10 @@
               & > span {
                 width: 100%;
                 max-width: 130px;
+                overflow: hidden;
                 font-size: var(--xxxl-font-size);
+                white-space: nowrap;
+                text-overflow: ellipsis;
               }
             }
           }
@@ -401,7 +407,7 @@
       padding-top: 5px;
 
       &.balance {
-        height: 150px;
+        height: 140px;
 
         & .currency-input-wrapper {
           & > .custom-selector{
