--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -10,7 +10,7 @@
   }
 
   & > h3 {
-    margin: 30px 0;
+    margin: 30px 0 80px;
     color: var(--dark-color);
     font-weight: var(--bold-font-weight);
     font-size: var(--large-font-size);
@@ -28,7 +28,7 @@
   left: 50%;
   z-index: 10000;
   width: 100%;
-  max-width: 90vw;
+  max-width: 100vw;
   padding: 32px;
   color: var(--dark-color);
   background-color: var(--modal-bg-color);
@@ -104,7 +104,6 @@
   &.metamask {
     top: 120px;
     left: 50%;
-    width: 100%;
     text-align: center;
     transform: translateX(-50%);
   }
@@ -113,15 +112,17 @@
     top: 30px;
     left: 100%;
     width: 100%;
-    transform: translateX(-105%);
+    transform: translateX(-100%);
 
     & > .wallet-buttons {
       & > button {
         display: flex;
         align-items: center;
         justify-content: space-between;
+        height: 30px;
         margin-top: 20px;
         padding: 5px 10px;
+        color: var(--dark-color);
         background-color: var(--transparent);
         border: none;
         border-radius: 5px;
@@ -230,6 +231,7 @@
     height: 60vh;
     margin: 0 auto;
     padding-top: 20px;
+    overflow-x: hidden;
     overflow-y: scroll;
 
     & span {
