--- a/src/components/DataList/DataList.scss
+++ b/src/components/DataList/DataList.scss
@@ -184,6 +184,7 @@
     & > button {
       display: none;
       width: 110px;
+      height: 30px;
       background-color: var(--modal-bg-color);
       border: 1px solid var(--border-color);
       border-radius: 5px;
