--- a/src/components/DataList/DataList.scss
+++ b/src/components/DataList/DataList.scss
@@ -1,7 +1,7 @@
 .add-contact {
   &-button {
     position: absolute;
-    top: 40px;
+    top: 48px;
     right: 30px;
     display: flex;
     align-items: center;
@@ -185,6 +185,7 @@
       display: none;
       width: 110px;
       height: 30px;
+      color: var(--dark-color);
       background-color: var(--modal-bg-color);
       border: 1px solid var(--border-color);
       border-radius: 5px;
@@ -232,7 +233,7 @@
     &-send, &-edit, &-copy {
       width: 30px;
       height: 30px;
-      margin-left: 10px;
+      margin-left: 15px;
       background-color: var(--transparent);
       background-repeat: no-repeat;
       background-size: contain;
@@ -263,8 +264,8 @@
 
       & > span {
         display: block;
-        width: 4px;
-        height: 4px;
+        width: 3px;
+        height: 3px;
         background-color: var(--dark-color);
         border-radius: 2px;
       }
