fix: minor style problems

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -242,6 +242,7 @@
     & .balances-token-right {
       display: flex;
       height: 100%;
+      padding-bottom: 5px;
 
       span {
         align-self: flex-end;
