--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -10,6 +10,7 @@
     height: 30px;
     background-image: url(../../images/logo_text.svg);
     background-repeat: no-repeat;
+    background-size: contain;
   }
 
   &-top {
