--- a/src/components/Spinner/Spinner.scss
+++ b/src/components/Spinner/Spinner.scss
@@ -8,19 +8,18 @@
 }
 
 .overlay {
+  width: 100%;
   text-align: center;
   background: var(--transparent);
 }
     
 .spinner {
   position: relative;
-  left: 50%;
   display: inline-block;
   width: 1em;
   height: 1em;
   margin: 0 auto;
   font-size: var(--xxl-font-size);
-  transform: translateX(-50%);
   
   &.center {
     @include absolute-center;
