--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -8,9 +8,9 @@
   &-logo {
     width: 150px;
     height: 30px;
+    margin-top: 5px;
     background-image: url(../../images/logo_text.svg);
     background-repeat: no-repeat;
-    background-size: contain;
   }
 
   &-top {
